--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Predict Math.random output in Node, Chrome, and Firefox",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "types": "dist/esm/JSRandomnessPredictor.d.ts",
   "exports": {
     "import": "./dist/esm/index.js",
     "require": "./dist/cjs/index.js"
@@ -12,9 +13,11 @@
     "js-randomness-predictor": "./dist/bin/cli/js-randomness-predictor.js"
   },
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "scripts": {
+    "prepublishOnly": "npm run build",
     "build": "rimraf dist && npm run build:esm && npm run build:cjs && npm run build:bin",
     "build:esm": "tsc -p tsconfig.esm.json",
     "build:cjs": "tsc -p tsconfig.cjs.json",
