--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "target": "es2020",
     "module": "es2020",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "outDir": "./dist/esm",
     "rootDir": "./src",
     "allowJs": false,
