--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "prepublishOnly": "npm run build",
     "build": "rimraf dist && npm run build:esm && npm run build:cjs",
+    "postbuild": "node scripts/postbuild.cjs",
     "build:esm": "tsc -p tsconfig.esm.json",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "test": "vitest --typecheck.tsconfig tsconfig.esm.json",
