--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,6 +4,7 @@
     "skipLibCheck": true,
     "strict": true,
     "baseUrl": "./",
+    "allowSyntheticDefaultImports": true,
     "types": ["node", "vitest/globals"]
   }
 }
