--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "test:open:coverage": "open coverage/lcov-report/index.html",
     "test:ui": "vitest --typecheck.tsconfig tsconfig.esm.json --ui",
     "format": "prettier . --write",
-    "publish:main:major": "npm version major && git push origin main --tags && npm publish",
-    "publish:main:minor": "npm version minor && git push origin main --tags && npm publish",
-    "publish:main:patch": "npm version patch && git push origin main --tags && npm publish"
+    "publish:main:major": "git add . && git commit --allow-empty -m \"[publish] #major\" && git push origin main",
+    "publish:main:minor": "git add . && git commit --allow-empty -m \"[publish] #minor\" && git push origin main",
+    "publish:main:patch": "git add . && git commit --allow-empty -m \"[publish] #patch\" && git push origin main"
   },
   "keywords": [
     "predict-javascript-math-random",
