--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
     "postbuild": "node scripts/postbuild.cjs",
     "build:esm": "tsc -p tsconfig.esm.json",
     "build:cjs": "tsc -p tsconfig.cjs.json",
-    "test": "vitest --typecheck.tsconfig tsconfig.esm.json",
-    "test:coverage": "vitest run --coverage --typecheck.tsconfig tsconfig.esm.json",
-    "test:open:coverage": "open coverage/lcov-report/index.html",
-    "test:ui": "vitest --typecheck.tsconfig tsconfig.esm.json --ui",
+    "test": "tsx --test",
     "format": "prettier . --write",
     "publish:main:major": "git add . && git commit --allow-empty -m \"[publish] #major\" && git push origin main",
     "publish:main:minor": "git add . && git commit --allow-empty -m \"[publish] #minor\" && git push origin main",
@@ -62,11 +59,8 @@
     "z3-solver": "^4.15.1"
   },
   "devDependencies": {
-    "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/ui": "^3.2.4",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "tsx": "^4.20.3",
-    "vitest": "^3.2.4"
+    "tsx": "^4.20.3"
   }
 }
