--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 24.2.0
+      - name: Install dependencies
+        run: npm install --ignore-scripts
       - name: Build files
         run: npm run build
   publish:
