--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,6 +16,7 @@ jobs:
         with:
           # So "Automated Version Bump" can read commit history.
           fetch-depth: 0
+          ref: ${{ github.event.workflow_run.head_sha }}
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
