--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -23,6 +23,8 @@ jobs:
           node-version: 24.2.0
           registry-url: "https://registry.npmjs.org/"
           always-auth: true
+      - name: Log event
+        run: echo "${{ toJson(github.event) }}"
       - name: Install dependencies
         run: npm install --ignore-scripts
       - name: Build files
