--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,7 +18,9 @@ jobs:
       - name: Install dependencies
         run: npm install --ignore-scripts
       - name: Log event
-        run: echo "${{ toJson(github.event) }}"
+        shell: bash
+        run: |
+          echo "${{ toJson(github.event) }}"
       - name: Build
         run: npm run build
       - name: Run tests
