--- a/.github/workflows/tests_and_publish.yaml
+++ b/.github/workflows/tests_and_publish.yaml
@@ -7,7 +7,7 @@ on:
     branches:
       - main
 jobs:
-  test-js:
+  test-js-and-maybe-publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
