--- a/.github/workflows/tests_and_publish.yaml
+++ b/.github/workflows/tests_and_publish.yaml
@@ -23,8 +23,10 @@ jobs:
         run: |
           echo "${{ toJson(github.event) }}"
       - name: Build
+        shell: bash
         run: npm run build
       - name: Run tests
+        shell: bash
         run: npm run test
         env:
           FORCE_COLOR: "1"
@@ -39,6 +41,7 @@ jobs:
           patch-wording: "#patch"
       - name: Publish to npm
         if: startsWith(github.event.head_commit.message, '[publish] ')
+        shell: bash
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
