--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "build:esm": "tsc -p tsconfig.esm.json",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "test": "tsx --test",
+    "test:current:nodejs:version": "tsx --test --test-name-pattern=\"Current Runtime Version : Dynamically Generated Sequence\" src/predictors/Node.test.ts",
     "format": "prettier . --write",
     "lint": "eslint .",
     "publish:main:major": "git add . && git commit --allow-empty -m \"[publish] #major\" && git push origin main",
