--- a/.github/workflows/test_all_node_versions.yaml
+++ b/.github/workflows/test_all_node_versions.yaml
@@ -24,4 +24,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - run: npm install
-      - run: npm test:current:nodejs:version
+      - run: npm run test:current:nodejs:version
