--- a/.github/workflows/test_all_node_versions.yaml
+++ b/.github/workflows/test_all_node_versions.yaml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 17.x, 18.x, 20.x, 21.x, 22.x, 23.x, 24.x]
+        node-version: [17.x, 18.x, 20.x, 21.x, 22.x, 23.x, 24.x]
 
     steps:
       - uses: actions/checkout@v4
