--- a/.github/workflows/test_all_node_versions.yaml
+++ b/.github/workflows/test_all_node_versions.yaml
@@ -50,4 +50,6 @@ jobs:
           name: ${{ needs.build.outputs.artifact-name }}
           path: ./dist
       - name: Run test
-        run: npm run test:current:nodejs:version
+        run: |
+          npm install
+          npm run test:current:nodejs:version
