--- a/.github/workflows/test_all_node_versions.yaml
+++ b/.github/workflows/test_all_node_versions.yaml
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x, 17.x, 18.x, 20.x, 21.x, 22.x, 23.x, 24.x]
+        node-version: [17.x, 18.x, 20.x, 21.x, 22.x, 23.x, 24.x]
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
