--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build:esm": "tsc -p tsconfig.esm.json",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "test": "tsx --test",
-    "test:current:nodejs:version": "node scripts/test_node.cjs",
+    "test:current:nodejs:version": "node --random-seed=123 scripts/test_node.cjs",
     "format": "prettier . --write",
     "lint": "eslint .",
     "publish:main:major": "git add . && git commit --allow-empty -m \"[publish] #major\" && git push origin main",
