--- a/.github/workflows/tests_and_publish.yaml
+++ b/.github/workflows/tests_and_publish.yaml
@@ -7,11 +7,33 @@ on:
     branches:
       - main
 jobs:
-  test-various-node-versions:
+  get-random-numbers-for-older-versions:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x, 17.x, 18.x, 20.x, 21.x, 22.x, 23.x, 24.x]
+        node-version: [10.x, 11.x, 12.x, 13.x, 14.x, 15.x, 16.x]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Get random numbers
+        shell: bash
+        run: node scripts/log_random_numbers.cjs
+      - name: Setup new node instance
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Get random numbers with --random-seed=123
+        shell: bash
+        run: node --random-seed=123 scripts/log_random_numbers.cjs
+  test-various-node-versions:
+    needs: get-random-numbers-for-older-versions
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [17.x, 18.x, 20.x, 21.x, 22.x, 23.x, 24.x]
     env:
       GREATER_OR_EQUAL_17: '["17.x", "18.x", "20.x", "21.x", "22.x", "23.x", "24.x"]'
     steps:
