--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "postbuild": "node scripts/postbuild.cjs",
     "build:esm": "tsc -p tsconfig.esm.json",
     "build:cjs": "tsc -p tsconfig.cjs.json",
-    "test": "tsx --test --test-skip-pattern=\"\\[LEGACY\\]\"",
-    "test:legacy": "tsx --test --test-name-pattern=\"\\[LEGACY\\]\"",
+    "test": "tsx --test tests/*.test.ts",
+    "test:legacy": "tsx --test tests/legacy/*.test.ts",
     "format": "prettier . --write",
     "lint": "eslint .",
     "publish:main:major": "git add . && git commit --allow-empty -m \"[publish] #major\" && git push origin main",
