--- a/.github/workflows/tests_and_publish.yaml
+++ b/.github/workflows/tests_and_publish.yaml
@@ -42,9 +42,16 @@ jobs:
       - name: Build
         shell: bash
         run: npm run build
-      - name: Run tests
+      - name: Run tests (v20.x and above)
+        if: ${{ matrix.node-version == '20.x' || matrix.node-version == '21.x' || matrix.node-version == '22.x' || matrix.node-version == '23.x' || matrix.node-version == '24.x' }}
         shell: bash
         run: npm run test
+        env:
+          FORCE_COLOR: "1"
+      - name: Run tests (v17.x - v19.x) [node:test doesn't exist in these versions]
+        if: ${{ matrix.node-version == '17.x' || matrix.node-version == '18.x' || matrix.node-version == '19.x' }}
+        shell: bash
+        run: npm run test:script
         env:
           FORCE_COLOR: "1"
   maybe-publish:
