--- a/.github/workflows/tests_and_publish.yaml
+++ b/.github/workflows/tests_and_publish.yaml
@@ -47,13 +47,13 @@ jobs:
         shell: bash
         run: npm run test
         env:
-          FORCE_COLOR: "1"
+          FORCE_COLOR: 1
       - name: Run tests (v17.x - v19.x) [node:test doesn't exist in these versions]
         if: ${{ matrix.node-version == '17.x' || matrix.node-version == '18.x' || matrix.node-version == '19.x' }}
         shell: bash
         run: npm run test:script
         env:
-          FORCE_COLOR: "1"
+          FORCE_COLOR: 1
   maybe-publish:
     needs: test-supported-node-versions
     runs-on: ubuntu-latest
