--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "postbuild": "node scripts/postbuild.cjs",
     "build:esm": "tsc -p tsconfig.esm.json",
     "build:cjs": "tsc -p tsconfig.cjs.json",
-    "test": "tsx --test tests/*.test.ts --color",
+    "test": "tsx --test tests/*.test.ts",
     "test:legacy": "tsx --test tests/legacy/*.test.ts --color",
     "test:script": "node scripts/testVersionsWithoutNodeTest.cjs",
     "format": "prettier . --write",
