--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "postbuild": "node scripts/postbuild.cjs",
     "build:esm": "tsc -p tsconfig.esm.json",
     "build:cjs": "tsc -p tsconfig.cjs.json",
-    "test": "tsx --test tests/*.test.ts",
-    "test:legacy": "tsx --test tests/legacy/*.test.ts --color",
-    "test:script": "node scripts/testVersionsWithoutNodeTest.cjs",
-    "test:all": "npm run test:legacy && npm run test:script && npm run test",
+    "test:nodeVersions20andGreaterAndBrowsers": "tsx --test tests/*.test.ts",
+    "test:nodeVersions16andLess": "tsx --test tests/legacy/*.test.ts --color",
+    "test:nodeVersions17to19": "node tests/scripts/testVersionsWithoutNodeTest.cjs",
+    "test": "npm run test:nodeVersions16andLess && npm run test:nodeVersions17to19 && npm run test:nodeVersions20andGreaterAndBrowsers",
     "format": "prettier . --write",
     "lint": "eslint .",
     "publish:main:major": "git add . && git commit --allow-empty -m \"[publish] #major\" && git push origin main",
