--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "test:nodeVersions20andGreaterAndBrowsers": "tsx --test tests/*.test.ts",
     "test:nodeVersions16andLess": "tsx --test tests/legacy/*.test.ts --color",
     "test:nodeVersions17to19": "node tests/scripts/testVersionsWithoutNodeTest.cjs",
+    "test:imports": "node --test tests/import/*.test.*",
     "test": "npm run test:nodeVersions16andLess && npm run test:nodeVersions17to19 && npm run test:nodeVersions20andGreaterAndBrowsers",
     "format": "prettier . --write",
     "lint": "eslint .",
@@ -59,20 +60,20 @@
     "url": "https://github.com/matthewoestreich/js-randomness-predictor/issues"
   },
   "dependencies": {
-    "@types/node": "^24.0.3",
-    "@types/yargs": "^17.0.33",
-    "typescript": "^5.8.3",
     "yargs": "^18.0.0",
-    "z3-solver": "^4.15.1"
+    "z3-solver": "^4.15.3"
   },
   "devDependencies": {
     "@types/eslint": "^9.6.1",
-    "@typescript-eslint/eslint-plugin": "^8.35.1",
-    "@typescript-eslint/parser": "^8.35.1",
-    "eslint": "^9.30.1",
-    "jiti": "^2.4.2",
+    "@types/node": "^24.3.3",
+    "@types/yargs": "^17.0.33",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
+    "eslint": "^9.35.0",
+    "jiti": "^2.5.1",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "tsx": "^4.20.3"
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2"
   }
 }
