add browser support

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "postbuild": "node postbuild.cjs",
     "build:esm": "tsc -p tsconfig.esm.json",
     "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build:browser": "vite build",
+    "vite:serve": "vite serve",
     "test:nodeVersions20andGreaterAndBrowsers": "tsx --test tests/*.test.ts",
     "test:nodeVersions16andLess": "tsx --test tests/legacy/*.test.ts --color",
     "test:nodeVersions17to19": "node tests/scripts/testVersionsWithoutNodeTest.cjs",
@@ -69,11 +71,14 @@
     "@types/yargs": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
+    "buffer": "^6.0.3",
     "eslint": "^9.35.0",
     "jiti": "^2.5.1",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "tsx": "^4.20.5",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vite": "^7.1.5",
+    "vite-plugin-static-copy": "^3.1.2"
   }
 }
