--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -11,5 +11,5 @@
     "isolatedModules": true
   },
   "include": ["./src/**/*"],
-  "exclude": ["node_modules/", "**/*.test.*"]
+  "exclude": ["node_modules/", "**/*.test.*", "src/browser/**/*"]
 }
