--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 * text=auto
 # Ignore 'cdn' folder from counting towards "languages"
 cdn/** linguist-vendored
+*.js linguist-language=TypeScript
+*.cjs linguist-language=TypeScript
+*.mjs linguist-language=TypeScript
