--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "engines": {
     "node": ">=17.0.0 <25.0.0"
   },
-  "description": "Predict Math.random output in Node, Chrome, and Firefox",
+  "description": "Predict Math.random output in Node, Chrome, Firefox, Safari, and Bun",
   "type": "module",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
