--- a/package.json
+++ b/package.json
@@ -28,11 +28,17 @@
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:umd": "vite build",
     "vite:serve": "vite serve",
-    "test:nodeVersions20andGreaterAndBrowsers": "tsx --test tests/*.test.ts",
-    "test:nodeVersions16andLess": "tsx --test tests/legacy/*.test.ts --color",
-    "test:nodeVersions17to19": "node tests/scripts/testVersionsWithoutNodeTest.cjs",
     "test:imports": "node --test tests/import/*.test.*",
-    "test": "npm run test:nodeVersions16andLess && npm run test:nodeVersions17to19 && npm run test:nodeVersions20andGreaterAndBrowsers",
+    "test:node:versions20andGreater": "tsx --test tests/node/*.test.ts",
+    "test:node:versions17to19": "node tests/node/scripts/testVersionsWithoutNodeTest.cjs",
+    "test:node:versions16andLess": "tsx --test tests/node/legacy/*.test.ts --color",
+    "test:node": "npm run test:node:versions20andGreater && npm run test:node:versions17to19 && npm run test:node:versions16andLess",
+    "test:cli": "tsx --test tests/cli/*.test.ts",
+    "test:bun": "tsx --test tests/bun/*.test.ts",
+    "test:firefox": "tsx --test tests/firefox/*.test.ts",
+    "test:chrome": "tsx --test tests/chrome/*.test.ts",
+    "test:safari": "tsx --test tests/safari/*.test.ts",
+    "test": "npm run test:cli && npm run test:node && npm run test:bun && npm run test:firefox && npm run test:chrome && npm run test:safari",
     "format": "prettier . \"!cdn/**/*\" --write",
     "lint": "eslint .",
     "publish:main:major": "git add . && git commit --allow-empty -m \"[publish] #major\" && git push origin main",
