--- a/.github/workflows/tests_and_publish.yaml
+++ b/.github/workflows/tests_and_publish.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 24.x
+          node-version: node
       - name: Install dependencies
         run: npm install --ignore-scripts
       - name: Build
@@ -27,8 +27,27 @@ jobs:
         run: npm run test:imports
         env:
           FORCE_COLOR: "1"
-  test-legacy-node-versions:
+  test-cli:
     needs: test-imports
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: node
+      - name: Install dependencies
+        run: npm install --ignore-scripts
+      - name: Build
+        shell: bash
+        run: npm run build
+      - name: Run tests
+        shell: bash
+        run: npm run test:cli
+        env:
+          FORCE_COLOR: "1"
+  test-legacy-node-versions:
+    needs: test-cli
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -68,7 +87,7 @@ jobs:
       - name: Run tests
         # if: ${{ matrix.node-version == '20.x' || matrix.node-version == '21.x' || matrix.node-version == '22.x' || matrix.node-version == '23.x' || matrix.node-version == '24.x' || matrix.node-version == 'node' }}
         shell: bash
-        run: npm run test
+        run: npm run test:ci
         env:
           FORCE_COLOR: 1
       #- name: Run tests (v17.x - v19.x) [node:test doesn't exist in these versions]
