--- a/.github/workflows/tests_and_publish.yaml
+++ b/.github/workflows/tests_and_publish.yaml
@@ -28,7 +28,6 @@ jobs:
         env:
           FORCE_COLOR: "1"
   test-cli:
-    needs: test-imports
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -47,7 +46,6 @@ jobs:
         env:
           FORCE_COLOR: "1"
   test-legacy-node-versions:
-    needs: test-cli
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -62,11 +60,10 @@ jobs:
         run: npm run build
       - name: Run tests
         shell: bash
-        run: npm run test:node:versions16andLess
+        run: npm run test:node:versions:LE:16
         env:
           FORCE_COLOR: "1"
   test-supported-node-versions:
-    needs: test-legacy-node-versions
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -87,17 +84,16 @@ jobs:
       - name: Run tests
         if: ${{ matrix.node-version == '20.x' || matrix.node-version == '21.x' || matrix.node-version == '22.x' || matrix.node-version == '23.x' || matrix.node-version == '24.x' || matrix.node-version == 'node' }}
         shell: bash
-        run: npm run test:node:versions20AndGreater
+        run: npm run test:node:versions:GE:20
         env:
           FORCE_COLOR: 1
       - name: Run tests (v17.x - v19.x) [node:test doesn't exist in these versions]
         if: ${{ matrix.node-version == '17.x' || matrix.node-version == '18.x' || matrix.node-version == '19.x' }}
         shell: bash
-        run: npm run test:node:versions17to19
+        run: npm run test:node:versions:17:18:19
         env:
           FORCE_COLOR: 1
   test-bun:
-    needs: test-supported-node-versions
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -116,7 +112,6 @@ jobs:
         env:
           FORCE_COLOR: "1"
   test-browsers:
-    needs: test-bun
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -135,7 +130,7 @@ jobs:
         env:
           FORCE_COLOR: "1"
   maybe-publish:
-    needs: test-browsers
+    needs: [test-imports, test-cli, test-legacy-node-versions, test-supported-node-versions, test-bun, test-browsers]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
