--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "build:umd": "vite build",
     "vite:serve": "vite serve",
     "test:imports": "node --test tests/import/*.test.*",
-    "test:node:versions20andGreater": "tsx --test tests/node/*.test.ts",
-    "test:node:versions17to19": "node tests/node/scripts/testVersionsWithoutNodeTest.cjs",
-    "test:node:versions16andLess": "tsx --test tests/node/legacy/*.test.ts --color",
-    "test:node": "npm run test:node:versions20andGreater && npm run test:node:versions17to19 && npm run test:node:versions16andLess",
+    "test:node:versions:GE:20": "tsx --test tests/node/*.test.ts",
+    "test:node:versions:17:18:19": "node tests/node/scripts/testVersionsWithoutNodeTest.cjs",
+    "test:node:versions:LE:16": "tsx --test tests/node/legacy/*.test.ts --color",
+    "test:node": "npm run test:node:versions:GE:20 && npm run test:node:versions:17:18:19 && npm run test:node:versions:LE:16",
     "test:cli": "tsx --test tests/cli/*.test.ts",
     "test:bun": "tsx --test tests/bun/*.test.ts",
     "test:firefox": "tsx --test tests/firefox/*.test.ts",
